--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,9 @@
+    Options +FollowSymLinks
+
+    IndexIgnore */*
+
     RewriteEngine on
 
-    RewriteBase /
 
     # If a directory or a file exists, use the request directly
     RewriteCond %{REQUEST_FILENAME} !-f
